# Optimization_SpAb

./: README.md  README.md.md
Data/Data_TNF/: All_data_240509.csv  Last_iteration_example.csv  Random_data_example.csv
Data/Data_TNF/Proposed/: Proposed_datax.csv
affinity_MOO/: README.md  best_model_state.pth  env.yaml  setup.cfg
affinity_MOO/Data/: Data.csv  Data_20230111.csv  Data_20230421.csv  Data_20230427.csv  Data_20230430.csv
affinity_MOO/Data/Proposed/: 20230415.csv  20230421.csv  20230427.csv  20230501.csv
affinity_MOO/Data/Raw experimental data/: Analyze_1_N5P103.csv  Analyze_2_N5P104.csv  Analyze_3_N5P107.csv  Analyze_4_N5P110.csv  Analyze_5_N5P113.csv
affinity_MOO/Notebooks/: BO_GPx_for_new_Ax_cpu.ipynb  MOO.ipynb
affinity_MOO/run_script/: run_MOO.py  run_MOO_Botorch.py  run_MOO_SAAS.py
affinity_MOO/src/MOO/: affinity_MOO.py  utils.py
affinity_MOO/src/MOO.egg-info/: PKG-INFO  SOURCES.txt
affinity_MOO/src/MOO_B/: MOO_Botorch.py
affinity_MOO/src/MOO_Botorch/: MOO_Botorch.py  utils.py
affinity_MOO/src/MOO_SAAS/: MOO_SAAS.py  utils.py
affinity_MOO/src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
affinity_MOO/src/affinity_MOO.egg-info/: PKG-INFO  SOURCES.txt
affinity_MOO/src/utils.egg-info/: SOURCES.txt  top_level.txt
optimization_ensemble/: README.md  create_env.sh  run_optimization.py
optimization_ensemble/optimization/: GA_constraint.py  random_int.py  single_objective_BO.py
