[metadata]
name = affinity_MOO
version = 0.0.0
license = MIT
description = Property prediction
long_description = file: README.md
author = Guangqi Wu
#author_email = 
classifiers=

[options]
packages = find:
package_dir =
    =src
include_package_data = True
#install_requires =
#   numpy
#   pandas
#   joblib

[options.extras_require]
dev =
    jupyterlab

[options.packages.find]
where=src